<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_home"
        android:title="Information"
        android:icon="@drawable/ic_baseline_local_hospital_24"/>
    <item android:id="@+id/nav_profile"
        android:title="Profile"
        android:icon="@drawable/ic_baseline_person_24"/>
    <item android:id="@+id/nav_users"
        android:title="Users"
        android:icon="@drawable/ic_baseline_people_24"/>
    <item android:id="@+id/nav_chat"
        android:title="Chats"
        android:icon="@drawable/ic_baseline_chat_24"/>
</menu>