...

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_chat"
                android:layout_marginRight="8dp"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:cardCornerRadius="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
...

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_medical_information"
                android:layout_marginRight="8dp"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:cardCornerRadius="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="73dp">
...
